--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bogbook",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "secure blockchain logging (blogging, without the l) -- bogging",
   "main": "server.js",
   "scripts": {
@@ -12,6 +12,8 @@
   "dependencies": {
     "ecstatic": "^3.3.1",
     "opn": "^6.0.0",
+    "tweetnacl": "^1.0.1",
+    "tweetnacl-util": "^0.15.0",
     "ws": "^6.2.1"
   }
 }
