--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bogbook",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "secure blockchain logging (blogging, without the l) -- bogging",
   "main": "server.js",
   "scripts": {
@@ -11,7 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "ecstatic": "^3.3.1",
-    "opn": "^6.0.0",
+    "open": "^6.2.0",
     "tweetnacl": "^1.0.1",
     "tweetnacl-util": "^0.15.0",
     "ws": "^6.2.1"
