--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ecstatic": "^4.1.2",
     "ed2curve": "^0.2.1",
     "open": "^6.2.0",
+    "sanitize-filename": "^1.6.3",
     "tweetnacl": "^1.0.1",
     "tweetnacl-util": "^0.15.0",
     "ws": "^6.2.1"
