--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "Ev Bogue <ev@evbogue.com>",
   "license": "MIT",
   "dependencies": {
-    "ecstatic": "^4.1.2",
     "ed2curve": "^0.2.1",
+    "koa": "^2.11.0",
+    "koa-static-server": "^1.4.0",
     "open": "^6.2.0",
     "tweetnacl": "^1.0.1",
     "tweetnacl-util": "^0.15.0",
