--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "ed2curve": "^0.2.1",
+    "express": "^4.17.1",
     "koa": "^2.11.0",
     "koa-static-server": "^1.4.0",
     "open": "^6.2.0",
