--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Ev Bogue <ev@evbogue.com>",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^4.1.0",
     "ed2curve": "^0.3.0",
     "express": "^4.17.1",
     "express-ws": "^4.0.0"
