--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "author": "Ev Bogue <ev@evbogue.com>",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^4.1.0",
+    "chalk": "^4.1.2",
     "ed2curve": "^0.3.0",
     "express": "^4.17.1",
-    "express-ws": "^4.0.0"
+    "express-ws": "^4.0.0",
+    "ws": "^8.2.3"
   }
 }
